--------------------------------------------------------------------------------
drkns 2024-02-28 23:28:48+00:00 - build 6279

1. Show current cube slice in color pickers.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-02-18 11:43:13+00:00 - build 6278

1. gh-801: Colors from deleted lines are reused causing spurious colors in the editor.

--------------------------------------------------------------------------------
drkns 2024-02-17 22:16:41+00:00 - build 6277

1. More gh-800.

--------------------------------------------------------------------------------
drkns 2024-02-17 16:37:11+00:00 - build 6276

1. Fix block selection of surrogate pairs.

--------------------------------------------------------------------------------
drkns 2024-02-17 12:06:08+00:00 - build 6275

1. gh-799: Issue with left mouse click outside of autocomplete history list.

2. gh-800: Backspace does not open user menu of parent folder.

--------------------------------------------------------------------------------
drkns 2024-02-16 00:38:30+00:00 - build 6274

1. Rework OS commands parsing. Should fix gh-792 and gh-798 too.

2. Refactoring, tests

--------------------------------------------------------------------------------
drkns 2024-02-12 20:23:32+00:00 - build 6273

1. gh-796 and other folder shortcuts improvements:
   - RCtrl+<N> in folder shortcuts menu works the same as Down
   - RCtrl+<N> in folder shortcuts menu switches to the corresponding list if needed
   - If there are no shortcuts assigned to RCtrl+<N>, an empty menu will pop up.

--------------------------------------------------------------------------------
drkns 2024-02-12 01:52:41+00:00 - build 6272

1. gh-795: FindFile Trap.

--------------------------------------------------------------------------------
MZK 2024-02-10 13:13:13-08:00 - build 6271

1. `Ctrl+Numpad5` in Editor menu "All matching entries" vertically aligns