@@ -104,7 +104,7 @@ intptr_t WINAPI AdvControl(
 
     <tr class="cont"><td class="cont" width="40%"><a name="ACTL_QUIT">ACTL_QUIT</a></td>
     <td class="cont" width="60%">Завершение работы Far Manager.<br>
-    <code>Param1</code> не используется.<br>
+    <code>Param1</code> код возврата Far Manager.<br>
     <code>Param2</code> не используется.</td></tr>
 
     <tr class="cont"><td class="cont" width="40%"><a name="ACTL_REDRAWALL">ACTL_REDRAWALL</a></td>
