@@ -1,3 +1,7 @@
+shmuel 2024-03-01 23:25:12+02:00 - build 812
+
+1. LuaFAR: ACTL_QUIT - Param1 is Far exit code.
+
 shmuel 2024-02-25 00:45:56+02:00 - build 811
 
 1. LuaFAR: DM_SETCHECK accepts also a boolean Param2
