@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+shmuel 2024-03-01 23:27:19+02:00 - build 6280
+
+1. ACTL_QUIT - Param1 is Far exit code.
+
+--------------------------------------------------------------------------------
 drkns 2024-02-28 23:28:48+00:00 - build 6279
 
 1. Show current cube slice in color pickers.
